--- a/sass/elements/_tags.scss
+++ b/sass/elements/_tags.scss
@@ -1,7 +1,7 @@
 .post-tags {
-    margin-top: map-get($spacing, 2);
-    overflow: hidden;
-    max-height: 35px;
+    @include margin-top(2);
+    // overflow: hidden;
+    // max-height: 35px;
 }
 
 .tag-case-study {
